Closed
Bug 1677130
Opened 5 years ago
Closed 5 years ago
Intermittent Assertion failure: mReleasedChunks->Last()->ChunkHeader().mDoneTimeStamp < aChunks->ChunkHeader().mDoneTimeStamp (Chunks must be released in increasing timestamps), at /builds/worker/workspace/obj-build/dist/include/mozilla/ProfileBufferChu
Categories
(Core :: Gecko Profiler, defect, P5)
Core
Gecko Profiler
Tracking
()
RESOLVED
FIXED
86 Branch
People
(Reporter: intermittent-bug-filer, Assigned: mozbugz)
References
Details
(Keywords: assertion, intermittent-failure)
Attachments
(1 file)
Filed by: ccoroiu [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=321681938&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/cQ3QsD7QR0OoXNlTaWcI1g/runs/0/artifacts/public/logs/live_backing.log
task 2020-11-13T10:38:03.121Z] 10:38:03 INFO - TEST-START | TestBaseProfiler.exe
[task 2020-11-13T10:38:03.190Z] 10:38:03 INFO - PID 2468 |
[task 2020-11-13T10:38:03.190Z] 10:38:03 INFO - Assertion failure: mReleasedChunks->Last()->ChunkHeader().mDoneTimeStamp < aChunks->ChunkHeader().mDoneTimeStamp (Chunks must be released in increasing timestamps), at /builds/worker/workspace/obj-build/dist/include/mozilla/ProfileBufferChunkManagerWithLocalLimit.h:156
[task 2020-11-13T10:38:03.190Z] 10:38:03 INFO - mozcrash checking c:\users\task_1605262553\appdata\local\temp\tmpseaowd for minidumps...
[task 2020-11-13T10:38:03.190Z] 10:38:03 WARNING - TEST-UNEXPECTED-FAIL | TestBaseProfiler.exe | test failed with return code 3221225477
[task 2020-11-13T10:38:03.190Z] 10:38:03 INFO - TEST-INFO took 70ms
[task 2020-11-13T10:38:03.190Z] 10:38:03 INFO - TEST-START | TestNonDereferenceable.exe
[task 2020-11-13T10:38:03.230Z] 10:38:03 INFO - mozcrash checking c:\users\task_1605262553\appdata\local\temp\tmprxls77 for minidumps...```
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Assignee | ||
Comment 3•5 years ago
|
||
I will work on this, to allow releases in any order, which could theoretically happen in some rare races conditions, especially in tests that use small fast-to-fill buffers.
Assignee: nobody → gsquelart
Depends on: 1651863
Comment hidden (Intermittent Failures Robot) |
Assignee | ||
Comment 5•5 years ago
|
||
Depends on D100859
Pushed by gsquelart@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/471f3893ab89
Allow out-of-order ReleaseChunk - r=canaltinova
Comment 7•5 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox86:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch
Updated•5 years ago
|
status-firefox84:
--- → wontfix
status-firefox85:
--- → wontfix
status-firefox-esr78:
--- → unaffected
Flags: in-testsuite+
Comment hidden (Intermittent Failures Robot) |
Assignee | ||
Comment 9•4 years ago
|
||
It looks like esr78 was in fact affected! But it's very rare, so I don't think we need to do anything.
You need to log in
before you can comment on or make changes to this bug.
Description
•