Bug 1677130 - Allow out-of-order ReleaseChunk - r=canaltinova

Differential Revision: https://phabricator.services.mozilla.com/D100860